--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h5 {
 }
 .wrapper {
   width: 360px;
-  height: 220px;
+  height: 240px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,16 +49,18 @@ input {
 }
 button {
   width: 128px;
-  height: 27px;
   padding: 6px 16px;
   border-radius: 6px;
   border: 1px solid #000000;
+  font-size: 1rem;
 }
 .btn {
   width: 100%;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  font-size: 1.2rem;
   margin-top: 12px;
+  margin-bottom: 12px;
   gap: 5;
 }
